[package]
name = "teo-py"
version = "0.2.21"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "teo"
crate-type = ["cdylib"]

[dependencies]
teo = { version = "0.2.21" }
teo-result = { version = "0.2.21", features = ["pyo3"] }
pyo3 = { version = "0.20.3", features = ["extension-module", "chrono", "indexmap"] }
pyo3-asyncio = { version = "0.20.0", features = ["attributes", "tokio-runtime"] }
tokio = { version = "1.0" }
bson = { version = "2.7.0", features = ["chrono-0_4", "serde_with"] }
bigdecimal = "=0.3.1"
chrono = { version = "0.4.24" }
indexmap = { version = "2.2.5" }
regex = "1.10.2"
inflector-plus = "0.11.7"
