[package]
name = "teo-py"
version = "0.3.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "teo"
crate-type = ["cdylib"]
 
[dependencies]
teo = { version = "0.3.0-alpha.0" }
teo-result = { version = "0.3.0-alpha.0", features = ["pyo3"] }
pyo3 = { version = "0.21.2", features = ["extension-module", "chrono", "indexmap"] }
pyo3-asyncio-0-21 = { version = "0.21.0", features = ["attributes", "tokio-runtime"] }
tokio = { version = "1.0" }
bson = { version = "2.7.0", features = ["chrono-0_4", "serde_with"] }
bigdecimal = "=0.3.1"
chrono = { version = "0.4.24" }
indexmap = { version = "2.2.5" }
regex = "1.10.2"
inflector-plus = "0.11.7"
time = "0.3.36"