[package]
name = "teo-py"
version = "0.3.6"
edition = "2021"

[lib]
name = "teo"
crate-type = ["cdylib"]

[dependencies]
teo = { version = "0.3.6", path = "../teo" }
teo-result = { version = "0.3.5", features = ["pyo3"], path = "../teo-result" }
pyo3 = { version = "0.23.2", features = ["extension-module", "chrono", "indexmap"] }
pyo3-async-runtimes = { version = "0.23.0", features = ["attributes", "tokio-runtime"] }
tokio = { version = "1.0" }
bson = { version = "2.13.0", features = ["chrono-0_4", "serde_with"] }
bigdecimal = "=0.3.1"
chrono = { version = "0.4.38" }
indexmap = { version = "2.6.0" }
regex = "1.11.1"
inflector-plus = "0.11.7"
time = "0.3.36"
hyper = { version = "1.5.0", features = ["full"] }
bytes = "1.8.0"
http-body-util = "0.1"
key-path = "0.2.3"