[build-system]
requires = ["maturin>=1.4,<1.5"]
build-backend = "maturin"

[project]
name = "teo"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.scripts]
teo = "teo.cli:main"
